--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <revision>1.1.21</revision>
         <changelist>-SNAPSHOT</changelist>
         <gitHubRepo>jenkinsci/tuleap-oauth-plugin</gitHubRepo>
-        <jenkins.version>2.361.4</jenkins.version>
+        <jenkins.version>2.401.3</jenkins.version>
         <hpi.compatibleSinceVersion>1.0.0</hpi.compatibleSinceVersion>
     </properties>
 
@@ -68,8 +68,8 @@
             </dependency>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
-                <artifactId>bom-2.361.x</artifactId>
-                <version>2102.v854b_fec19c92</version>
+                <artifactId>bom-2.401.x</artifactId>
+                <version>2675.v1515e14da_7a_6</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
