--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>4.64</version>
-        <relativePath />
+        <version>5.17</version>
+        <relativePath/>
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>tuleap-oauth</artifactId>
@@ -15,7 +15,9 @@
         <revision>1.1.21</revision>
         <changelist>-SNAPSHOT</changelist>
         <gitHubRepo>jenkinsci/tuleap-oauth-plugin</gitHubRepo>
-        <jenkins.version>2.401.3</jenkins.version>
+        <!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
+        <jenkins.baseline>2.492</jenkins.baseline>
+        <jenkins.version>${jenkins.baseline}.3</jenkins.version>
         <hpi.compatibleSinceVersion>1.0.0</hpi.compatibleSinceVersion>
     </properties>
 
@@ -24,7 +26,7 @@
 
     <url>https://github.com/jenkinsci/tuleap-oauth-plugin</url>
     <scm>
-        <connection>scm:git:ssh://github.com/${gitHubRepo}.git</connection>
+        <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/${gitHubRepo}.git</developerConnection>
         <url>https://github.com/${gitHubRepo}</url>
         <tag>${scmTag}</tag>
@@ -36,16 +38,6 @@
             <url>https://opensource.org/licenses/MIT</url>
         </license>
     </licenses>
-    <developers>
-        <developer>
-            <id>robinsoc</id>
-            <name>Clarck Robinson</name>
-        </developer>
-        <developer>
-            <id>erwyn</id>
-            <name>Martin GOYOT</name>
-        </developer>
-    </developers>
     <repositories>
         <repository>
             <id>repo.jenkins-ci.org</id>
@@ -68,8 +60,8 @@
             </dependency>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
-                <artifactId>bom-2.401.x</artifactId>
-                <version>2675.v1515e14da_7a_6</version>
+                <artifactId>bom-${jenkins.baseline}.x</artifactId>
+                <version>4890.vfca_82c6741a_d</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -100,7 +92,6 @@
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>1.15</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -112,7 +103,6 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.16.1</version>
             <scope>compile</scope>
         </dependency>
         <!-- tests -->
